# decompiler-service

./: .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml
app/: docker_entrypoint.py  pyproject.toml
app/decapi/: app.py
